# anira-bela-examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Toolchain_Bela.cmake
anira-bela-benchmark/: CMakeLists.txt  defineBelaBenchmark.cpp
anira-bela-benchmark/cmake/: install.cmake
anira-bela-inference/: CMakeLists.txt  render.cpp
anira-x-bela-inference/: CMakeLists.txt  render.cpp
inference-configs/: SimpleGainConfig.h
models/configs/: HybridNNConfig.h
